# app/Models/Sucursal.php
@@ -6,6 +6,7 @@ use Illuminate\Database\Eloquent\Model;
 
 class Sucursal extends Model
 {
+    protected $table = 'sucursales';
 
     protected $fillable = [
         'nombre',
